gcc/testsuite/rust/rustc/ui/parser/removed-syntax-closure-lifetime.rs
type closure = Box<lt/fn()>;
// { dg-error "" "" { target *-*-* } .-1 }

